[package]
name = "ross-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
strum_macros = "0.24.3"
syn = { version = "2.0.15", features = ["extra-traits"] }

[lib]
proc-macro = true
